--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,7 +4,7 @@
   <div class="wrapper">
 
     {%- if page.comments != false -%}
-		<p style="font-size:small"> Comments will be appproved before publishing. </p>
+		<p style="font-size:small"> Włącz się do dyskusji. Komentarze są moderowane - będą się pokazywały te, które jakoś dotyczą treści na blogu. </p>
       {%- include comments.html -%}
     {%- endif -%}
 
