--- a/_includes/comment_form.html
+++ b/_includes/comment_form.html
@@ -7,20 +7,20 @@
   <input type="hidden" name="options[reCaptcha][secret]"  value="{{ site.reCaptcha.secret }}">
 
   <div class="textfield">
-    <label for="comment-form-message"><h2>Add Comment<small><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;">(cancel reply)</a></small></h2>
-      <textarea class="textfield__input" name="fields[message]" type="text" id="comment-form-message" placeholder="Your comment (markdown accepted)" required rows="6"></textarea>
+    <label for="comment-form-message"><h2>Dodaj komentarz<small><a rel="nofollow" id="cancel-comment-reply-link" href="{{ page.url | absolute_url }}#respond" style="display:none;"> (anuluj)</a></small></h2>
+      <textarea class="textfield__input" name="fields[message]" type="text" id="comment-form-message" placeholder="Twój komentarz (zwykły tekst albo markdown)*" required rows="6"></textarea>
     </label>
   </div>
 
     <div class="textfield narrowfield">
       <label for="comment-form-name">Name
-        <input class="textfield__input" name="fields[name]" type="text" id="comment-form-name" placeholder="Your name (required)" required/>
+        <input class="textfield__input" name="fields[name]" type="text" id="comment-form-name" placeholder="Twoja nazwa*" required/>
       </label>
     </div>
 
     <div class="textfield narrowfield">
       <label for="comment-form-email">E-mail
-        <input class="textfield__input" name="fields[email]" type="email" id="comment-form-email" placeholder="Your email (optional)"/>
+        <input class="textfield__input" name="fields[email]" type="email" id="comment-form-email" placeholder="e-mail (opcjonalnie)"/>
       </label>
     </div>
 
@@ -33,7 +33,7 @@
     <div id="reCaptcha" class="g-recaptcha" data-sitekey="{{ site.reCaptcha.siteKey }}"></div>
 
     <button class="button" id="comment-form-submit">
-      Submit
+      Wyślij
     </button>
 
 </form>
