--- a/_includes/comments.html
+++ b/_includes/comments.html
@@ -3,7 +3,7 @@
   {% if site.data.comments[page.slug] %}
   <!-- Existing comments -->
   <div class="comments__existing">
-    <h2>Comments</h2>
+    <h2>Komentarze</h2>
     {% assign comments = site.data.comments[page.slug] | where_exp: "item", "item.replying_to_uid == ''" %}
     {% assign comments_by_date = comments | sort: 'date' | reverse %}
     <!-- List main comments in reverse date order, newest first. List replies in date order, oldest first. -->
