--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -34,6 +34,8 @@
         <p>{{- site.description | escape -}}</p>
       </div>
     </div>
+    
+    <p>Zobacz też mój poradnik techniczny <a href="https://andrzejq.github.io/Office_S_Tips/">https://andrzejq.github.io/Office_S_Tips/</a>.</p>
 
   </div>
 
