--- a/assets/main.scss
+++ b/assets/main.scss
@@ -4,3 +4,85 @@
 
 @import "minima";
 @import "comment-styles";
+@import "tab-styles";
+
+.footnotes {
+  font-size: $small-font-size;
+  margin: -10px 20px;
+}
+
+/* https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_danger */
+
+%callout-base {
+  padding: 4px 12px;
+  margin-left: 30px;
+  margin-right: 30px;
+}
+
+.danger {
+  @extend %callout-base;
+  background-color: #ffdddd;
+  border-left: 6px solid #f44336;
+}
+
+.success {
+  @extend %callout-base;
+  background-color: #ddffdd;
+  border-left: 6px solid #4CAF50;
+}
+
+.info {
+  @extend %callout-base;
+  background-color: #e7f3fe;
+  border-left: 6px solid #2196F3;
+}
+
+.warning {
+  @extend %callout-base;
+  background-color: #ffffcc;
+  border-left: 6px solid #ffeb3b;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(359deg);
+  }
+}
+
+.icon {
+  display: inline-block;
+  fill: currentColor;
+  height: 1em;
+  line-height: 1;
+  position: relative;
+  top: -0.125em; // fine-tune alignment
+  vertical-align: middle;
+  width: 1em;
+
+  &.spin {
+    animation: spin 2s infinite linear;
+  }
+}
+
+#comment-section, #comment-section * {
+  box-sizing: border-box;
+}
+
+// style for dataframes dumped by pandas
+.dataframe {
+  text-align: right;
+}
+
+// style for svg-fig include
+.svg-fig {
+  font-size: 80%;
+}
+
+sup[id^='fnref'] {
+  font-size: 0.8em;
+  line-height: 0; // prevent superscript from affecting the line height when it appears
+}
