--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -35,7 +35,12 @@
       </div>
     </div>
     
-    <p>Zobacz też mój poradnik techniczny <a href="https://andrzejq.github.io/Office_S_Tips/">https://andrzejq.github.io/Office_S_Tips/</a>.</p>
+    <p style="font-size:smaller"> 
+    Zobacz też mój poradnik techniczny 
+		<a href="https://andrzejq.github.io/Office_S_Tips/">https://andrzejq.github.io/Office_S_Tips/</a>.</p>
+    <p style="font-size:smaller"> 
+    A czasem także Tobie mogą się przydać moje notatki elektronika programisty 
+		<a href="https://andrzejq.github.io/El_Prog/">https://andrzejq.github.io/El_Prog/</a>.</p>
 
   </div>
 
