--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -40,7 +40,10 @@
 		<a href="https://andrzejq.github.io/Office_S_Tips/">https://andrzejq.github.io/Office_S_Tips/</a>.</p>
     <p style="font-size:smaller"> 
     A czasem także Tobie mogą się przydać moje notatki elektronika programisty 
-		<a href="https://andrzejq.github.io/El_Prog/">https://andrzejq.github.io/El_Prog/</a>.</p>
+		<a href="https://andrzejq.github.io/El_Prog/">https://andrzejq.github.io/El_Prog/</a>. 
+    <br> Możesz też poczytać krótkie historyjki na temat organizacji współpracy
+    <a href="https://andrzejq.github.io/Org_wsp/">https://andrzejq.github.io/Org_wsp/</a> 
+    </p>
 
   </div>
 
